--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   background-size: cover;
   background-position: center;
   width: 100vw;
-  height: 100vh;
+  height: 140vh;
   margin-top: 0;
   padding-top: 0%;
   font-family: Arial, Helvetica, sans-serif;
@@ -15,10 +15,16 @@
 
 }
 
+.header{
+  padding-top: 25px;
+}
 
 
-
-
+.footer{
+  height: 80px;
+  width: 100vw;
+  margin-top: 0%;
+}
 
 .list-section {
   height: 100vh;
