--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   margin-top: 0;
   padding-top: 0%;
   font-family: Arial, Helvetica, sans-serif;
-  font: Helvetica;
   
   
 
@@ -40,6 +39,8 @@
   align-self: auto;
   flex-wrap: wrap;
   align-content: space-evenly;
+  box-sizing: border-box;
+  width:90vw;
   
 
 }
